# mech447

./: LICENSE  README.md  make_docs.bash  make_docs.bat  pyproject.toml
docs/: index.html  mech447.html  search.js
docs/mech447/: mixtureplanner.html  projecteconomics.html  residentialplanner.html  stockflow.html  unitpriceforecaster.html
examples/: Jupyter_example.ipynb  mixture_planner_example.py  mixture_planner_example_2.py  project_economics_example.py  residential_planner_example.py  stocks_and_flows_example.py  unit_price_forecast_example.py
examples/example_data/: PS5_Hypothetical_Residence.csv  mixture_example_data.csv
mech447/: __init__.py  mixtureplanner.py  projecteconomics.py  requirements.txt  residentialplanner.py  stockflow.py  unitpriceforecaster.py
mech447/test_data/: test_demand_data.csv
